--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,21 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="%REACT_APP_RADAR_NAME%" />
+  <meta name="description" content="Orange Europe Partner Radar" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
   <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
-  <meta property="og:title" content="%REACT_APP_RADAR_NAME%" />
+  <meta property="og:title" content="Orange Europe Partner Radar" />
   <meta property="og:image" content="%PUBLIC_URL%/logo.svg" />
 
   <meta name="format-detection" content="telephone=no" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>%REACT_APP_RADAR_NAME%</title>
+  <title>Orange Europe Partner Radar</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to view the %REACT_APP_RADAR_NAME%.</noscript>
+  <noscript>You need to enable JavaScript to view the Orange Europe Partner Radar.</noscript>
   <div id="root"></div>
 </body>
 
